HCM-41: Create change password
